--- a/style.css
+++ b/style.css
@@ -4,5 +4,16 @@
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #2c3e50;
-  margin-top: 60px;
+  width: 150px;
+  margin: 5px;
 }
+.checkbox-block {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  font-size: medium;
+  font-weight: bolder;
+
+}
+
